hopefully fixed other not showing up

--- a/css/main.css
+++ b/css/main.css
@@ -128,12 +128,6 @@ nav a:hover {
     display: block;
     border-radius: 4px;
     transition: background 0.1s;
-    display: none;
-    position: absolute;
-    background-color: #222;
-    box-shadow: 0 8px 16px rgba(0,0,0,0.15);
-    border-radius: 4px;
-    z-index: 20;
 }
 .dropdown-content a:hover {
     background-color: #333;
